--- a/ft_printf2/Makefile
+++ b/ft_printf2/Makefile
@@ -6,7 +6,7 @@
 #    By: yadouble <yadouble@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/05/21 20:44:54 by yadouble          #+#    #+#              #
-#    Updated: 2018/06/05 16:18:30 by yadouble         ###   ########.fr        #
+#    Updated: 2018/06/13 21:33:03 by yadouble         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -28,7 +28,9 @@ SRC = 	ft_printf.c \
 		decimal_option.c \
 		process_hexadecimal.c \
 		process_unsigned.c \
-		process_octal.c
+		process_octal.c \
+		process_large_char.c \
+		process_strings.c
 SRCS = $(addprefix $(SRCS_DIR)/,$(SRC))
 OBJS = $(addprefix $(OBJ_DIR)/,$(SRC:.c=.o))
 
