--- a/Fdf/Makefile
+++ b/Fdf/Makefile
@@ -6,23 +6,25 @@
 #    By: yadouble <yadouble@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/08/14 17:35:39 by yadouble          #+#    #+#              #
-#    Updated: 2018/09/19 15:55:54 by yadouble         ###   ########.fr        #
+#    Updated: 2018/09/20 20:30:06 by yadouble         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = fdf
 CC = gcc
-CFLAGS = -Wall -Wextra -Werror
+CFLAGS = -Wall -Wextra -Werror -Ofast -flto -march=native
 FRAMEWORK = -framework OpenGL -framework AppKit
 SRCS_DIR = srcs
 OBJ_DIR = obj
 SRCS = fdf.c \
 		main.c \
-		parse.c \
+		check.c \
 		utils.c \
 		bresenham.c \
 		draw.c \
-		tools.c
+		tools.c \
+		memory_manager.c \
+		window.c
 SRCS := $(addprefix $(SRCS_DIR)/,$(SRCS))
 OBJ = $(subst $(SRCS_DIR),$(OBJ_DIR),$(SRCS:.c=.o))
 
@@ -30,7 +32,8 @@ all : $(NAME)
 
 $(NAME) : $(OBJ)
 	@make -C libft
-	@$(CC) -o $(NAME) $(CFLAGS) $(OBJ) $(FRAMEWORK) -g3 libft/libft.a minilibx_macos/libmlx.a
+	@$(CC) -o $(NAME) $(CFLAGS) $(OBJ) $(FRAMEWORK) \
+	libft/libft.a minilibx_macos/libmlx.a
 
 $(OBJ_DIR)/%.o : $(SRCS_DIR)/%.c
 	@mkdir -p $(OBJ_DIR)
