--- a/Fdf/libft/Makefile
+++ b/Fdf/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: yadouble <yadouble@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2018/04/10 16:15:49 by yadouble          #+#    #+#              #
-#    Updated: 2018/08/15 20:50:10 by yadouble         ###   ########.fr        #
+#    Updated: 2018/09/25 15:16:24 by yadouble         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -41,7 +41,7 @@ SRCS = ft_memset.c \
 		ft_isascii.c \
 		ft_isdigit.c \
 		ft_isprint.c \
-		ft_is_MAJ_hexa.c \
+		ft_is_maj_hexa.c \
 		ft_memalloc.c \
 		ft_memdel.c \
 		ft_strclr.c \
