--- a/Matcha/package.json
+++ b/Matcha/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Un site de rencontres pour les personnes désirant rencontrer des rencontres sans rencontre.",
 	"scripts": {
-		"dev": "nodemon -e 'js,ejs' Back/server.js"
+		"dev": "concurrently \"nodemon server/server\" \"npm start --prefix client\""
 	},
 	"author": "yadouble",
 	"license": "MIT",
@@ -11,6 +11,8 @@
 	"dependencies": {
 		"bcrypt": "^3.0.2",
 		"body-parser": "^1.18.3",
+		"concurrently": "^4.1.0",
+		"cors": "^2.8.5",
 		"express": "^4.16.4",
 		"jsonwebtoken": "^8.4.0",
 		"mysql": "^2.16.0",
