Sign-up/Sign-in page wip

--- a/Matcha/server/package.json
+++ b/Matcha/server/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Un site de rencontres pour les personnes désirant rencontrer des rencontres sans rencontre.",
 	"scripts": {
-		"dev": "concurrently \"nodemon server/server\" \"npm start --prefix client\""
+		"dev": "concurrently \"nodemon server\" \"npm start --prefix ../client\""
 	},
 	"author": "yadouble",
 	"license": "MIT",
